# lex-rs

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
src/lex_rs/: __about__.py  __init__.py  parser.py
tests/: __init__.py  test_parser.py
